cabal-version:       3.6
name:                frank
version:             0.0.0.0

-- A short (one-line) description of the package.
synopsis:            the Frank reversable abstract machine
-- A longer description of the package.
description:         the Frank reversable abstract machine

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:             MIT
license-file:        LICENSE
author:             Chris Upshaw
maintainer:         Chris Upshaw <chrisaupshaw@gmail.com>

-- A copyright notice.
copyright:           2022 Chris Upshaw
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     
    README.md
    CHANGELOG.md
tested-with:         GHC == 8.10.7

common common-options
  build-depends:       base ^>= 4.14
                     , relude
                     , with-utf8

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Frank

executable frank-exe
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       frank
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite frank-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       frank
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark frank-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , frank
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
